--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
-                            <a href="cv.pdf" class="btn w-100 border-end" download>Download CV</a>
+                            <a href="NAAZIM SANOAF.pdf" class="btn w-100 border-end" download>Download CV</a>
                         </div>
                     </div>
                 </div>
