--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                                 <span class="fw-medium text-primary">Experience:</span> 2 Year
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +94 75 345 6789
+                                <span class="fw-medium text-primary">Phone:</span> +94 75 565 6480
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Email:</span> naazimsanoaf@gmail.com
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Address:</span> 123 Street, New York, USA
+                                <span class="fw-medium text-primary">Address:</span> Kalmunai, Sri Lanka
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Availability:</span> Taking Orders
