--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                                 <p class="mb-2">EL&N Café | <small>2024 - Present</small></p>
                                 <p>Assisted senior chefs in the preparation of a wide range of pastries, cakes, and desserts, ensuring high-quality standards in taste, texture, and presentation.</p>
                             </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Baker Experience</h5>
+                                <p class="mb-2">Home town Bakery | <small>September 2023 – August 2024</small></p>
+                                <p>Assisted senior chefs in the preparation of a wide range of pastries, cakes, and desserts, ensuring high-quality standards in taste, texture, and presentation.</p>
+                            </div>
                             
                         </div>
                     </section>
