--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Baker Experience</h5>
                                 <p class="mb-2">Home town Bakery | <small>September 2023 – August 2024</small></p>
-                                <p>Assisted senior chefs in the preparation of a wide range of pastries, cakes, and desserts, ensuring high-quality standards in taste, texture, and presentation.</p>
+                                <p> Managed daily baking operations, maintained
+                                    quality and presentation standards, developed new
+                                    recipes, ensured compliance with food safety
+                                    regulations</p>
                             </div>
                             
                         </div>
