--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                             <div class="typed-text d-none">Commis Pastry Chef</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-whatsapp"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://wa.me/qr/ATATJRLZHSFXC1"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.facebook.com/share/18qFs5kRhy/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/sanoafabooucker?igsh=aXpkNTAweDljNXlk"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="NAAZIM SANOAF.pdf" class="btn w-100 border-end" download>Download CV</a>
