--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@
                     <section class="wow fadeIn" data-wow-delay="0.1s">
                         <div class="bg-secondary text-light text-center p-5">
                             <div class="d-flex justify-content-center mb-4">
-                                <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-whatsapp"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-secondary btn-square mx-1" href="https://wa.me/qr/ATATJRLZHSFXC1"><i class="fab fa-whatsapp"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="https://www.facebook.com/share/18qFs5kRhy/"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="https://www.instagram.com/sanoafabooucker?igsh=aXpkNTAweDljNXlk"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="d-flex justify-content-center mb-3">
                                 <a class="text-light px-3 border-end" href="#">Privacy</a>
