--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="d-flex justify-content-center mt-auto mb-3">
                             <a class="btn btn-secondary btn-square mx-1" href="https://wa.me/qr/ATATJRLZHSFXC1"><i class="fab fa-whatsapp"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.facebook.com/share/18qFs5kRhy/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/naazim-sanoaf-659617365"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/sanoafabooucker?igsh=aXpkNTAweDljNXlk"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
@@ -468,7 +468,7 @@
                             <div class="d-flex justify-content-center mb-4">
                                 <a class="btn btn-secondary btn-square mx-1" href="https://wa.me/qr/ATATJRLZHSFXC1"><i class="fab fa-whatsapp"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.facebook.com/share/18qFs5kRhy/"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="https://www.linkedin.com/in/naazim-sanoaf-659617365"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="https://www.instagram.com/sanoafabooucker?igsh=aXpkNTAweDljNXlk"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="d-flex justify-content-center mb-3">
