--- a/index.html
+++ b/index.html
@@ -342,6 +342,17 @@
                                             </div>
                                         </div>
                                     </div>
+				    <div class="row portfolio-container">
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid portfolio-img" src="img/fd1.jpg" alt="">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/f5.jpg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>		
                                 </div>
                     
                             </div>
