--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid portfolio-img" src="img/fd5.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/f5.jpg" data-lightbox="portfolio">
+                                                <a href="img/fd5.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -361,7 +361,7 @@
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid portfolio-img" src="img/fd4.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/f6.jpg" data-lightbox="portfolio">
+                                                <a href="img/fd4.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -376,7 +376,7 @@
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid portfolio-img" src="img/fd3.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/f5.jpg" data-lightbox="portfolio">
+                                                <a href="img/fd3.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
@@ -386,7 +386,7 @@
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid portfolio-img" src="img/fd1.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/f6.jpg" data-lightbox="portfolio">
+                                                <a href="img/fd1.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
